<resources>
    <string name="app_name">PictureUploader</string>
    <string name="add_picture">Add Picture</string>
    <string name="image_url">Image URL:</string>
    <string name="provide_image_url">Provide image URL</string>
    <string name="provide_image_title">Provide image title</string>
    <string name="title">Title:</string>
    <string name="add">Add</string>
    <string name="date">Date:</string>
    <string name="switch_to_detail_frag">Switch Card</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo_frag_desc">Chosen photo from list</string>
    <string name="detail_frag_title_label">Title:</string>
    <string name="detail_frag_tags_label">Tags:</string>
    <string name="detail_frag_date_label">Date:</string>
</resources>
