<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPictureActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <TextView
        android:id="@+id/url_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/universal_margin_side"
        android:layout_marginEnd="@dimen/universal_margin_side"
        android:layout_marginBottom="@dimen/universal_margin_bottom"
        android:gravity="center"
        android:text="@string/image_url"
        app:layout_constraintBottom_toTopOf="@+id/url_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/url_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/universal_margin_side"
        android:layout_marginTop="@dimen/universal_margin_top"
        android:layout_marginEnd="@dimen/universal_margin_side"
        android:layout_marginBottom="@dimen/universal_margin_bottom"
        android:ems="10"
        android:hint="@string/provide_image_url"
        android:inputType="textUri"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/title_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/universal_margin_side"
        android:layout_marginTop="@dimen/universal_margin_top"
        android:layout_marginEnd="@dimen/universal_margin_side"
        android:layout_marginBottom="@dimen/universal_margin_bottom"
        android:ems="10"
        android:hint="@string/provide_image_title"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/title_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/universal_margin_side"
        android:layout_marginEnd="@dimen/universal_margin_side"
        android:layout_marginBottom="@dimen/universal_margin_bottom"
        android:gravity="center"
        android:text="@string/title"
        app:layout_constraintBottom_toTopOf="@+id/title_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <DatePicker
        android:id="@+id/date_picker"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/universal_margin_side"
        android:layout_marginTop="@dimen/universal_margin_top"
        android:layout_marginEnd="@dimen/universal_margin_side"
        android:layout_marginBottom="@dimen/universal_margin_bottom"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintBottom_toTopOf="@id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <Button
        android:id="@+id/add_picture_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/universal_margin_side"
        android:layout_marginTop="@dimen/universal_margin_top"
        android:layout_marginEnd="@dimen/universal_margin_side"
        android:layout_marginBottom="@dimen/universal_margin_bottom"
        android:background="@drawable/roundedbutton"
        android:textColor="@color/textColor"
        android:onClick="onAddClicked"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/date_picker_label"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/universal_margin_side"
        android:layout_marginTop="@dimen/universal_margin_top"
        android:layout_marginEnd="@dimen/universal_margin_side"
        android:layout_marginBottom="@dimen/universal_margin_bottom"
        android:text="@string/date"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_input" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>